--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
-    <script src="main.js"></script>
-    <title>Title</title>
+    <script src="src/main.js"></script>
+    <title>Firechat</title>
 </head>
 <body>
 
