--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="src/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
-    <script src="src/main.js"></script>
     <title>Firechat</title>
 </head>
 <body>
 
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
